Created page with "{{OpenCascade_Navigation |Select_name=Výběr |Zoom_name=Zoom |Rotate_view_name=Rotace pohledu |Pan_name=Posun pohledu"

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -326,19 +326,16 @@
 <h3><span class="mw-headline" id="Navigace_OpenCascade">Navigace OpenCascade</span></h3>
 <p>Styl navigace OpenCascade byl vytvo&#345;en podle vzoru <a rel="nofollow" class="external text" href="https://www.opencascade.com/">OpenCascade</a>.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
-<th style="width:16%; background: #ededff; padding:2px 2px;">Select
+<th style="width:16%; background: #ededff; padding:2px 2px;">V&yacute;b&#283;r
 </th>
 <th colspan="2" style="width:28%; background: #ededff; padding:2px 2px;">Zoom
 </th>
-<th colspan="2" style="width:28%; background: #ededff; padding:2px 2px;">Rotate view
+<th colspan="2" style="width:28%; background: #ededff; padding:2px 2px;">Rotace pohledu
 </th>
-<th colspan="2" style="width:28%; background: #ededff; padding:2px 2px;">Pan
-
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></th></tr>
+<th colspan="2" style="width:28%; background: #ededff; padding:2px 2px;">Posun pohledu
+</th></tr>
 <tr style="text-align:center;">
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
 </td>
@@ -354,19 +351,16 @@
 <td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_rotate.svg&amp;filetimestamp=20181210192821&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_rotate.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
 <td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB_hold.svg&amp;filetimestamp=20181210194025&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </div></td>
 <td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB%2BRMB_hold.svg&amp;filetimestamp=20181210192958&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB%2BRMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
 <td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB_hold.svg&amp;filetimestamp=20181210194240&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB_hold.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
 </div></td>
 <td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
 <td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </div></td></tr>
 <tr style="vertical-align:top; background:#efefef;">
@@ -392,7 +386,7 @@
 </div></td>
 <td colspan="2">Hold the middle mouse button, then move the pointer. It is possible to hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>.
 </td></tr></tbody></table>
-</div>
+
 <p><span id="OpenInventor_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="OpenInventor_navigace">OpenInventor navigace</span></h3>
@@ -1072,15 +1066,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111203346
+Cached time: 20260111203427
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.313 seconds
-Real time usage: 0.613 seconds
-Preprocessor visited node count: 1577/1000000
-Post&#8208;expand include size: 77275/2097152 bytes
-Template argument size: 29506/2097152 bytes
+CPU time usage: 0.304 seconds
+Real time usage: 0.373 seconds
+Preprocessor visited node count: 1575/1000000
+Post&#8208;expand include size: 77211/2097152 bytes
+Template argument size: 29442/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1088,19 +1082,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  122.801      1 -total
- 14.29%   17.546      1 Template:Blender_Navigation
- 10.52%   12.913      1 Template:Userdocnavi/cs
-  8.28%   10.174      1 Template:OpenSCAD_Navigation
-  7.04%    8.649      8 Template:ASCII
-  6.59%    8.095      1 Template:Gesture_Navigation
-  4.51%    5.542      1 Template:TinkerCAD_Navigation
-  4.36%    5.356      1 Template:Touchpad_Navigation/cs
-  3.97%    4.870      2 Template:OpenInventor_Navigation
-  3.96%    4.859      1 Template:VersionMinus
+100.00%   54.627      1 -total
+ 12.71%    6.940      8 Template:ASCII
+ 10.49%    5.731      1 Template:Userdocnavi/cs
+  6.64%    3.629      1 Template:OpenSCAD_Navigation
+  5.64%    3.079     70 Template:KEY
+  5.38%    2.938      1 Template:SolidWorks_Navigation
+  4.99%    2.725      1 Template:Navigation_menu_2
+  4.90%    2.679      2 Template:OpenInventor_Navigation
+  4.89%    2.671      1 Template:Touchpad_Navigation/cs
+  4.35%    2.377      1 Template:SiemensNX_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203346 and revision id 1736085. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203427 and revision id 1736089. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
