--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -364,10 +364,8 @@
 <td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
 </td>
 <td colspan="2">Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat pohled.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Alternatively, hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> and the left mouse button, then move the pointer.
+<p>Alternativn&#283; podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> a lev&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td colspan="2">Hold the middle mouse button, then press and hold the right mouse button, then move the pointer.
@@ -1060,15 +1058,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111203608
+Cached time: 20260111203635
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.329 seconds
-Real time usage: 0.545 seconds
-Preprocessor visited node count: 1571/1000000
-Post&#8208;expand include size: 77030/2097152 bytes
-Template argument size: 29261/2097152 bytes
+CPU time usage: 0.293 seconds
+Real time usage: 0.386 seconds
+Preprocessor visited node count: 1570/1000000
+Post&#8208;expand include size: 76990/2097152 bytes
+Template argument size: 29221/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1076,19 +1074,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   82.975      1 -total
- 13.33%   11.062      1 Template:Touchpad_Navigation/cs
- 12.65%   10.498      1 Template:Userdocnavi/cs
- 10.43%    8.653      8 Template:ASCII
-  5.40%    4.479      1 Template:OpenSCAD_Navigation
-  4.75%    3.945     70 Template:KEY
-  4.75%    3.944      1 Template:Blender_Navigation
-  4.49%    3.726      9 Template:MenuCommand
-  4.29%    3.559      1 Template:Navigation_menu_2
-  3.86%    3.199      1 Template:SiemensNX_Navigation
+100.00%   67.724      1 -total
+ 11.46%    7.761      8 Template:ASCII
+  9.75%    6.601      1 Template:Userdocnavi/cs
+  6.54%    4.428      1 Template:OpenSCAD_Navigation
+  5.88%    3.983      1 Template:Blender_Navigation
+  5.00%    3.384      1 Template:SolidWorks_Navigation
+  4.67%    3.160     70 Template:KEY
+  4.55%    3.080      1 Template:SiemensNX_Navigation
+  4.51%    3.052      1 Template:CAD_Navigation
+  4.49%    3.043      1 Template:MayaGesture_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203608 and revision id 1736093. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203634 and revision id 1736095. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
