--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -368,10 +368,8 @@
 </p>
 </td>
 <td colspan="2">Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i, pot&eacute; stiskn&#283;te a podr&#382;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Alternatively, hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> and the right mouse button, then move the pointer.
+<p>Alternativn&#283; podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> a prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td colspan="2">Hold the middle mouse button, then move the pointer. It is possible to hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>.
@@ -1056,15 +1054,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111203725
+Cached time: 20260111203805
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.332 seconds
-Real time usage: 0.661 seconds
-Preprocessor visited node count: 1569/1000000
-Post&#8208;expand include size: 76951/2097152 bytes
-Template argument size: 29182/2097152 bytes
+CPU time usage: 0.317 seconds
+Real time usage: 0.498 seconds
+Preprocessor visited node count: 1568/1000000
+Post&#8208;expand include size: 76911/2097152 bytes
+Template argument size: 29142/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1072,19 +1070,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  182.603      1 -total
- 11.89%   21.720      8 Template:ASCII
- 11.42%   20.845      1 Template:Userdocnavi/cs
- 11.02%   20.119      2 Template:OpenInventor_Navigation
-  9.05%   16.525      1 Template:Inventor_Navigation/cs
-  8.60%   15.699      1 Template:OpenCascade_Navigation
-  5.87%   10.713      1 Template:OpenSCAD_Navigation
-  4.44%    8.115     70 Template:KEY
-  4.13%    7.547      1 Template:Gesture_Navigation
-  3.26%    5.954      1 Template:SolidWorks_Navigation
+100.00%   91.332      1 -total
+  9.86%    9.003      1 Template:Userdocnavi/cs
+  8.72%    7.968      8 Template:ASCII
+  5.88%    5.368      1 Template:CAD_Navigation
+  5.79%    5.289      1 Template:Gesture_Navigation
+  5.44%    4.968      1 Template:SiemensNX_Navigation
+  5.37%    4.906      1 Template:OpenSCAD_Navigation
+  4.80%    4.386      1 Template:Touchpad_Navigation/cs
+  4.78%    4.361      1 Template:Touchpad_Navigation
+  4.67%    4.263      1 Template:OpenCascade_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203725 and revision id 1736097. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203804 and revision id 1736099. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
