--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -370,11 +370,9 @@
 <td colspan="2">Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i, pot&eacute; stiskn&#283;te a podr&#382;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 <p>Alternativn&#283; podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> a prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td colspan="2">Hold the middle mouse button, then move the pointer. It is possible to hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>.
+</td>
+<td colspan="2">Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel. Je mo&#382;n&eacute; podr&#382;et kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>.
 </td></tr></tbody></table>
-
 <p><span id="OpenInventor_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="OpenInventor_navigace">OpenInventor navigace</span></h3>
@@ -1054,15 +1052,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111203805
+Cached time: 20260111203840
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.317 seconds
-Real time usage: 0.498 seconds
-Preprocessor visited node count: 1568/1000000
-Post&#8208;expand include size: 76911/2097152 bytes
-Template argument size: 29142/2097152 bytes
+CPU time usage: 0.283 seconds
+Real time usage: 0.397 seconds
+Preprocessor visited node count: 1567/1000000
+Post&#8208;expand include size: 76876/2097152 bytes
+Template argument size: 29107/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1070,19 +1068,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   91.332      1 -total
-  9.86%    9.003      1 Template:Userdocnavi/cs
-  8.72%    7.968      8 Template:ASCII
-  5.88%    5.368      1 Template:CAD_Navigation
-  5.79%    5.289      1 Template:Gesture_Navigation
-  5.44%    4.968      1 Template:SiemensNX_Navigation
-  5.37%    4.906      1 Template:OpenSCAD_Navigation
-  4.80%    4.386      1 Template:Touchpad_Navigation/cs
-  4.78%    4.361      1 Template:Touchpad_Navigation
-  4.67%    4.263      1 Template:OpenCascade_Navigation
+100.00%   60.250      1 -total
+ 12.56%    7.567      8 Template:ASCII
+ 12.35%    7.440      1 Template:Userdocnavi/cs
+  8.57%    5.161      1 Template:OpenSCAD_Navigation
+  5.50%    3.311     70 Template:KEY
+  5.16%    3.106      1 Template:Navigation_menu_2
+  5.10%    3.070      1 Template:SiemensNX_Navigation
+  4.98%    3.002      1 Template:Blender_Navigation
+  4.76%    2.868      1 Template:SolidWorks_Navigation
+  4.10%    2.468      1 Template:Inventor_Navigation/cs
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203804 and revision id 1736099. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203839 and revision id 1736101. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
