--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -375,7 +375,7 @@
 </td></tr></tbody></table>
 <p><span id="OpenInventor_navigation"></span>
 </p>
-<h3><span class="mw-headline" id="OpenInventor_navigace">OpenInventor navigace</span></h3>
+<h3><span class="mw-headline" id="Navigace_OpenInventor">Navigace OpenInventor</span></h3>
 <div class="mw-translate-fuzzy">
 <h3><span id="Inventor_Navigation_.28Tv.C5.AFr.C4.8D.C3.AD_navigace.29"></span><span class="mw-headline" id="Inventor_Navigation_(Tv&#367;r&#269;&iacute;_navigace)">Inventor Navigation (Tv&#367;r&#269;&iacute; navigace)</span></h3>
 <p>Tv&#367;r&#269;&iacute; navigace, vytv&aacute;&#345;en&aacute; podle <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Open_Inventor">Open Inventor</a> (nezam&#283;&#328;ovat s Autodesk Inventor), kde se nepou&#382;&iacute;v&aacute; pouze v&yacute;b&#283;r my&scaron;&iacute;. P&#345;i vyb&iacute;r&aacute;n&iacute; objekt&#367; mus&iacute;te dr&#382;et stisknutou kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">CTRL</span>.
@@ -1052,11 +1052,11 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111203840
+Cached time: 20260111203925
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.283 seconds
+CPU time usage: 0.292 seconds
 Real time usage: 0.397 seconds
 Preprocessor visited node count: 1567/1000000
 Post&#8208;expand include size: 76876/2097152 bytes
@@ -1068,19 +1068,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   60.250      1 -total
- 12.56%    7.567      8 Template:ASCII
- 12.35%    7.440      1 Template:Userdocnavi/cs
-  8.57%    5.161      1 Template:OpenSCAD_Navigation
-  5.50%    3.311     70 Template:KEY
-  5.16%    3.106      1 Template:Navigation_menu_2
-  5.10%    3.070      1 Template:SiemensNX_Navigation
-  4.98%    3.002      1 Template:Blender_Navigation
-  4.76%    2.868      1 Template:SolidWorks_Navigation
-  4.10%    2.468      1 Template:Inventor_Navigation/cs
+100.00%   70.928      1 -total
+ 13.00%    9.221      8 Template:ASCII
+  8.99%    6.380      1 Template:OpenSCAD_Navigation
+  7.71%    5.472      1 Template:SiemensNX_Navigation
+  7.37%    5.230      1 Template:Userdocnavi/cs
+  4.94%    3.504      2 Template:Version
+  4.91%    3.479     70 Template:KEY
+  4.35%    3.083      1 Template:Blender_Navigation
+  4.00%    2.838      2 Template:Docnav
+  3.87%    2.742      1 Template:MayaGesture_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203839 and revision id 1736101. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203924 and revision id 1736103. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
