Updated page Mouse navigation/cs

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -376,89 +376,8 @@
 <p><span id="OpenInventor_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Navigace_OpenInventor">Navigace OpenInventor</span></h3>
-<div class="mw-translate-fuzzy">
-<h3><span id="Inventor_Navigation_.28Tv.C5.AFr.C4.8D.C3.AD_navigace.29"></span><span class="mw-headline" id="Inventor_Navigation_(Tv&#367;r&#269;&iacute;_navigace)">Inventor Navigation (Tv&#367;r&#269;&iacute; navigace)</span></h3>
-<p>Tv&#367;r&#269;&iacute; navigace, vytv&aacute;&#345;en&aacute; podle <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Open_Inventor">Open Inventor</a> (nezam&#283;&#328;ovat s Autodesk Inventor), kde se nepou&#382;&iacute;v&aacute; pouze v&yacute;b&#283;r my&scaron;&iacute;. P&#345;i vyb&iacute;r&aacute;n&iacute; objekt&#367; mus&iacute;te dr&#382;et stisknutou kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">CTRL</span>.
+<p>Navigace OpenInventor (d&#345;&iacute;ve Inventor) byl vytvo&#345;en podle vzoru <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_Inventor">Open Inventoru</a>. Chcete-li vybrat objekty, mus&iacute;te podr&#382;et kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> nebo <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>.
 </p>
-<table border="1" class="mousemodel">
-<tbody><tr>
-<th align="center" width="25%">Select
-</th>
-<th align="center" width="25%">Pan
-</th>
-<th align="center" width="25%">Zoom
-</th>
-<th align="center" width="25%">Rotate View
-</th></tr>
-<tr align="center">
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pan_cursor.png&amp;filetimestamp=20240917200627&amp;.html" class="mw-file-description"><img src="../File/Pan_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Zoom_cursor.png&amp;filetimestamp=20240917104519&amp;.html" class="mw-file-description"><img src="../File/Zoom_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Rotate_cursor.png&amp;filetimestamp=20240917104455&amp;.html" class="mw-file-description"><img src="../File/Rotate_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td></tr>
-<tr align="center">
-<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ctrl</span> +<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Select-mouse.svg&amp;filetimestamp=20111203221921&amp;.html" class="mw-file-description" title="to Select"><img alt="to Select" src="../File/Select-mouse.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pan-mouse.svg&amp;filetimestamp=20111203221536&amp;.html" class="mw-file-description" title="to Pan"><img alt="to Pan" src="../File/Pan-mouse.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Zoom-mouse.svg&amp;filetimestamp=20111203224155&amp;.html" class="mw-file-description" title="to Zoom in or out"><img alt="to Zoom in or out" src="../File/Zoom-mouse.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span> or <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Rotate-mouse.svg&amp;filetimestamp=20111203221615&amp;.html" class="mw-file-description" title="to Zoom in or out"><img alt="to Zoom in or out" src="../File/Rotate-mouse.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Select-mouse.svg&amp;filetimestamp=20111203221921&amp;.html" class="mw-file-description" title="to Rotate"><img alt="to Rotate" src="../File/Select-mouse.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td></tr>
-<tr valign="top">
-<td>Hold ctrl and press the left mouse button over an object you want to select.
-</td>
-<td>Click the left mouse button and move the object around.
-</td>
-<td>Use the mouse wheel to zoom in and out, or click and hold the middle mouse button and click the left mouse button.
-</td>
-<td>Click and drag with the left mouse button to rotate
-</td></tr></tbody></table>
-<table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
-<tbody><tr>
-<th style="width:25%; background: #ededff; padding:2px 2px;">Select
-</th>
-<th colspan="2" style="width:25%; background: #ededff; padding:2px 2px;">Zoom
-</th>
-<th style="width:25%; background: #ededff; padding:2px 2px;">Rotate view
-</th>
-<th style="width:25%; background: #ededff; padding:2px 2px;">Pan
-</th></tr>
-<tr style="text-align:center;">
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
-</td>
-<td colspan="2"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Zoom_cursor.png&amp;filetimestamp=20240917104519&amp;.html" class="mw-file-description"><img src="../File/Zoom_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Rotate_cursor.png&amp;filetimestamp=20240917104455&amp;.html" class="mw-file-description"><img src="../File/Rotate_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pan_cursor.png&amp;filetimestamp=20240917200627&amp;.html" class="mw-file-description"><img src="../File/Pan_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td></tr>
-<tr style="text-align:center;">
-<td>{{{Shift}}}+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB.svg&amp;filetimestamp=20181210182920&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_rotate.svg&amp;filetimestamp=20181210192821&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_rotate.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB%2BLMB_hold.svg&amp;filetimestamp=20181210192927&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB%2BLMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB_hold.svg&amp;filetimestamp=20181210194025&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td></tr>
-<tr style="vertical-align:top; background:#efefef;">
-<td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>, then press the left mouse button over an object you want to select.
-</td>
-<td colspan="2">Use the mouse wheel to zoom in and out.
-<p>Alternatively, hold the middle mouse button, then press and hold the left mouse button, then move the pointer.
-</p>
-</td>
-<td>Hold the left mouse button, then move the pointer.
-</td>
-<td>Hold the middle mouse button, then move the pointer.
-</td></tr></tbody></table>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This style is not based on Autodesk Inventor.
 </p>
@@ -1052,15 +971,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111203925
+Cached time: 20260111204035
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.292 seconds
-Real time usage: 0.397 seconds
-Preprocessor visited node count: 1567/1000000
-Post&#8208;expand include size: 76876/2097152 bytes
-Template argument size: 29107/2097152 bytes
+CPU time usage: 0.276 seconds
+Real time usage: 0.348 seconds
+Preprocessor visited node count: 1526/1000000
+Post&#8208;expand include size: 73516/2097152 bytes
+Template argument size: 28451/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1068,19 +987,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   70.928      1 -total
- 13.00%    9.221      8 Template:ASCII
-  8.99%    6.380      1 Template:OpenSCAD_Navigation
-  7.71%    5.472      1 Template:SiemensNX_Navigation
-  7.37%    5.230      1 Template:Userdocnavi/cs
-  4.94%    3.504      2 Template:Version
-  4.91%    3.479     70 Template:KEY
-  4.35%    3.083      1 Template:Blender_Navigation
-  4.00%    2.838      2 Template:Docnav
-  3.87%    2.742      1 Template:MayaGesture_Navigation
+100.00%   59.106      1 -total
+ 13.89%    8.208      8 Template:ASCII
+  8.76%    5.178      1 Template:Userdocnavi/cs
+  7.26%    4.289      1 Template:OpenSCAD_Navigation
+  6.36%    3.760     69 Template:KEY
+  5.36%    3.171      1 Template:OpenInventor_Navigation
+  4.83%    2.853      1 Template:Blender_Navigation
+  4.78%    2.824      1 Template:OpenCascade_Navigation
+  4.71%    2.782      1 Template:Gesture_Navigation
+  4.64%    2.743      1 Template:Touchpad_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203924 and revision id 1736103. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204034 and revision id 1736105. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
