--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -377,11 +377,8 @@
 </p>
 <h3><span class="mw-headline" id="Navigace_OpenInventor">Navigace OpenInventor</span></h3>
 <p>Navigace OpenInventor (d&#345;&iacute;ve Inventor) byl vytvo&#345;en podle vzoru <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_Inventor">Open Inventoru</a>. Chcete-li vybrat objekty, mus&iacute;te podr&#382;et kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> nebo <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>.
+</p><p>Tento styl nen&iacute; zalo&#382;en na programu Autodesk Inventor.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>This style is not based on Autodesk Inventor.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
@@ -971,13 +968,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204035
+Cached time: 20260111204102
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.276 seconds
-Real time usage: 0.348 seconds
-Preprocessor visited node count: 1526/1000000
+CPU time usage: 0.364 seconds
+Real time usage: 0.652 seconds
+Preprocessor visited node count: 1525/1000000
 Post&#8208;expand include size: 73516/2097152 bytes
 Template argument size: 28451/2097152 bytes
 Highest expansion depth: 7/100
@@ -987,19 +984,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.106      1 -total
- 13.89%    8.208      8 Template:ASCII
-  8.76%    5.178      1 Template:Userdocnavi/cs
-  7.26%    4.289      1 Template:OpenSCAD_Navigation
-  6.36%    3.760     69 Template:KEY
-  5.36%    3.171      1 Template:OpenInventor_Navigation
-  4.83%    2.853      1 Template:Blender_Navigation
-  4.78%    2.824      1 Template:OpenCascade_Navigation
-  4.71%    2.782      1 Template:Gesture_Navigation
-  4.64%    2.743      1 Template:Touchpad_Navigation
+100.00%  171.989      1 -total
+ 17.27%   29.709      2 Template:Button
+  9.67%   16.627      1 Template:Userdocnavi/cs
+  9.18%   15.782      2 Template:Version
+  7.95%   13.672      8 Template:ASCII
+  6.21%   10.678      1 Template:Touchpad_Navigation
+  5.59%    9.618     69 Template:KEY
+  4.75%    8.162      9 Template:MenuCommand
+  4.38%    7.539      1 Template:OpenInventor_Navigation
+  4.34%    7.468      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204034 and revision id 1736105. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204102 and revision id 1736107. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
