Updated page TechDraw 2PointCosmeticLine/de

--- a/wiki/de/TechDraw_2PointCosmeticLine.html
+++ b/wiki/de/TechDraw_2PointCosmeticLine.html
@@ -3,17 +3,15 @@
 <li><a href="../TechDraw_2PointCosmeticLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw 2PointCosmeticLine (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Ligne cosm&eacute;tique par 2 points (74% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linea cosmetica per 2 punti (74% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Dodaj lini&#281; kosmetyczn&#261; wytyczon&#261; przez dwa punkty (74% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj lini&#281; kosmetyczn&#261; wytyczon&#261; przez dwa punkty (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1074;&#1089;&#1087;&#1086;&#1084;&#1086;&#1075;&#1072;&#1090;&#1077;&#1083;&#1100;&#1085;&#1091;&#1102; &#1083;&#1080;&#1085;&#1080;&#1102; &#1084;&#1077;&#1078;&#1076;&#1091; 2-&#1084;&#1103; &#1090;&#1086;&#1095;&#1082;&#1072;&#1084;&#1080;" (26% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; 2&#51216; &#44984;&#48136;&#49440; (74% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_2PointCenterLine.html" title="TechDraw 2PointCenterLine/de">2PunkteMittellinie</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/de">Hilfskreis</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_DecorateLine.html" title="TechDraw DecorateLine/de">Liniendarstellung&Auml;ndern</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -151,35 +149,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111145949
+Cached time: 20260111204153
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.116 seconds
-Preprocessor visited node count: 368/1000000
-Post&#8208;expand include size: 29246/2097152 bytes
-Template argument size: 11440/2097152 bytes
+CPU time usage: 0.075 seconds
+Real time usage: 0.112 seconds
+Preprocessor visited node count: 367/1000000
+Post&#8208;expand include size: 29276/2097152 bytes
+Template argument size: 11460/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1770/5000000 bytes
+Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.568      1 -total
- 22.99%    6.337      1 Template:TechDraw_Tools_navi/de
- 13.83%    3.812      2 Template:Navigation_menu_2
- 12.37%    3.410      2 Template:Docnav/de
- 11.18%    3.083      1 Template:GuiCommand/de
- 10.32%    2.846      1 Template:Version/de
-  7.82%    2.156      1 Template:Userdocnavi/de
-  6.71%    1.849      1 Template:Caption
-  6.35%    1.750      2 Template:Incode
-  6.18%    1.704      1 Template:KEY
+100.00%   22.785      1 -total
+ 28.44%    6.479      1 Template:TechDraw_Tools_navi/de
+ 14.05%    3.202      2 Template:Navigation_menu_2
+ 11.69%    2.663      2 Template:Docnav/de
+  9.30%    2.120      1 Template:Version/de
+  9.21%    2.098      1 Template:GuiCommand/de
+  8.15%    1.856      1 Template:Userdocnavi/de
+  6.21%    1.416      1 Template:KEY
+  6.03%    1.375      1 Template:Caption
+  5.51%    1.256      2 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:214976-0!canonical and timestamp 20260111145949 and revision id 1734497. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:214976-0!canonical and timestamp 20260111204153 and revision id 1736109. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
