--- a/wiki/de/TechDraw_2PointCosmeticLine.html
+++ b/wiki/de/TechDraw_2PointCosmeticLine.html
@@ -105,14 +105,12 @@
 </p><p>Hilfslinien k&ouml;nnen mit den Methoden <code>makeCosmeticLine(v1, v2)</code> oder <code>makeCosmeticLine3d(v1, v2)</code> von DrawViewPart erstellt werden.
 </p><p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_2PointCenterLine.html" title="TechDraw 2PointCenterLine/de">2PunkteMittellinie</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/de">Hilfskreis</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_DecorateLine.html" title="TechDraw DecorateLine/de">Liniendarstellung&Auml;ndern</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
@@ -149,15 +147,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204153
+Cached time: 20260111204201
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.112 seconds
-Preprocessor visited node count: 367/1000000
-Post&#8208;expand include size: 29276/2097152 bytes
-Template argument size: 11460/2097152 bytes
+CPU time usage: 0.094 seconds
+Real time usage: 0.214 seconds
+Preprocessor visited node count: 366/1000000
+Post&#8208;expand include size: 29306/2097152 bytes
+Template argument size: 11480/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -165,19 +163,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.785      1 -total
- 28.44%    6.479      1 Template:TechDraw_Tools_navi/de
- 14.05%    3.202      2 Template:Navigation_menu_2
- 11.69%    2.663      2 Template:Docnav/de
-  9.30%    2.120      1 Template:Version/de
-  9.21%    2.098      1 Template:GuiCommand/de
-  8.15%    1.856      1 Template:Userdocnavi/de
-  6.21%    1.416      1 Template:KEY
-  6.03%    1.375      1 Template:Caption
-  5.51%    1.256      2 Template:Incode
+100.00%   43.188      1 -total
+ 18.43%    7.960      1 Template:TechDraw_Tools_navi/de
+ 16.39%    7.080      1 Template:Version/de
+ 11.35%    4.903      1 Template:GuiCommand/de
+ 11.05%    4.774      2 Template:Docnav/de
+ 10.34%    4.464      2 Template:Navigation_menu_2
+  8.82%    3.810      1 Template:Caption
+  7.90%    3.413      1 Template:Userdocnavi/de
+  6.37%    2.751      2 Template:Incode
+  6.01%    2.597      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:214976-0!canonical and timestamp 20260111204153 and revision id 1736109. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:214976-0!canonical and timestamp 20260111204201 and revision id 1736111. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
