Created page with "|Select_text=Podržte klávesu {{KEY|Shift}} a poté klikněte levým tlačítkem myši na objekt, který chcete vybrat."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -399,9 +399,8 @@
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pan_cursor.png&amp;filetimestamp=20240917200627&amp;.html" class="mw-file-description"><img src="../File/Pan_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
 </td></tr>
 <tr style="text-align:center;">
-<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>
-<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB.svg&amp;filetimestamp=20181210182920&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</div></td>
+<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB.svg&amp;filetimestamp=20181210182920&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
+</td>
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_rotate.svg&amp;filetimestamp=20181210192821&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_rotate.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB%2BLMB_hold.svg&amp;filetimestamp=20181210192927&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB%2BLMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
@@ -411,8 +410,7 @@
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
-<td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>, then press the left mouse button over an object you want to select.
-
+<td>Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a pot&eacute; klikn&#283;te lev&yacute;m tla&#269;&iacute;tkem my&scaron;i na objekt, kter&yacute; chcete vybrat.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> instead to select multiple objects.
 </p>
@@ -964,15 +962,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204249
+Cached time: 20260111204319
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.276 seconds
-Real time usage: 0.358 seconds
-Preprocessor visited node count: 1523/1000000
-Post&#8208;expand include size: 73466/2097152 bytes
-Template argument size: 28401/2097152 bytes
+CPU time usage: 0.271 seconds
+Real time usage: 0.397 seconds
+Preprocessor visited node count: 1522/1000000
+Post&#8208;expand include size: 73429/2097152 bytes
+Template argument size: 28364/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -980,19 +978,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.070      1 -total
- 13.15%    7.769      8 Template:ASCII
-  8.88%    5.245      1 Template:Userdocnavi/cs
-  6.24%    3.688      1 Template:CAD_Navigation
-  5.67%    3.349     69 Template:KEY
-  5.13%    3.028      1 Template:Gesture_Navigation
-  4.96%    2.929      1 Template:Touchpad_Navigation/cs
-  4.79%    2.830      1 Template:OpenSCAD_Navigation
-  4.60%    2.720      1 Template:SolidWorks_Navigation
-  4.24%    2.504      1 Template:Touchpad_Navigation
+100.00%  107.530      1 -total
+ 21.04%   22.624      1 Template:Userdocnavi/cs
+ 14.99%   16.119      1 Template:Navigation_menu_2
+  9.21%    9.902      1 Template:OpenSCAD_Navigation
+  9.00%    9.681      1 Template:OpenCascade_Navigation
+  7.35%    7.903      8 Template:ASCII
+  7.25%    7.792      1 Template:SolidWorks_Navigation
+  4.43%    4.765      1 Template:OpenInventor_Navigation
+  4.34%    4.663      1 Template:Revit_Navigation
+  4.16%    4.473      1 Template:SiemensNX_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204249 and revision id 1736117. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204318 and revision id 1736121. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
