Created page with "|Zoom_text=Pomocí kolečka myši můžete přibližovat a oddalovat zobrazení."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -413,10 +413,8 @@
 <td>Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a pot&eacute; klikn&#283;te lev&yacute;m tla&#269;&iacute;tkem my&scaron;i na objekt, kter&yacute; chcete vybrat.
 <p>Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>, abyste vybrali v&iacute;ce objekt&#367;.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td colspan="2">Use the mouse wheel to zoom in and out.
-
+</td>
+<td colspan="2">Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat zobrazen&iacute;.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Alternatively, hold the middle mouse button, then press and hold the left mouse button, then move the pointer.
 </p>
@@ -960,15 +958,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204348
+Cached time: 20260111204414
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.277 seconds
-Real time usage: 0.479 seconds
-Preprocessor visited node count: 1521/1000000
-Post&#8208;expand include size: 73382/2097152 bytes
-Template argument size: 28317/2097152 bytes
+CPU time usage: 0.299 seconds
+Real time usage: 1.052 seconds
+Preprocessor visited node count: 1520/1000000
+Post&#8208;expand include size: 73355/2097152 bytes
+Template argument size: 28290/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -976,19 +974,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  156.768      1 -total
-  9.68%   15.174      1 Template:Userdocnavi/cs
-  9.65%   15.129      1 Template:OpenCascade_Navigation
-  7.49%   11.743      1 Template:OpenSCAD_Navigation
-  7.10%   11.135      8 Template:ASCII
-  7.09%   11.111      1 Template:Gesture_Navigation
-  6.74%   10.561      1 Template:TinkerCAD_Navigation
-  6.05%    9.487      1 Template:MayaGesture_Navigation
-  5.93%    9.290      1 Template:SolidWorks_Navigation
-  5.76%    9.027      1 Template:Touchpad_Navigation/cs
+100.00%  230.230      1 -total
+ 10.47%   24.100      2 Template:Docnav
+  9.78%   22.510      1 Template:OpenInventor_Navigation
+  8.70%   20.029      8 Template:ASCII
+  8.37%   19.260      1 Template:Userdocnavi/cs
+  6.26%   14.404      2 Template:Version
+  6.21%   14.302      1 Template:Gesture_Navigation
+  6.07%   13.986      1 Template:OpenSCAD_Navigation
+  5.03%   11.586      1 Template:Revit_Navigation
+  4.69%   10.795      1 Template:MayaGesture_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204347 and revision id 1736125. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204412 and revision id 1736129. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
